--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "vsvchat-server",
   "version": "0.1.0",
   "description": "Server for VSV Chat",
-  "main": "index.mts",
+  "main": "index.ts",
   "scripts": {
-    "start": "node .",
+    "start": "ts-node index.ts",
     "dev": "nodemon",
     "logs": "heroku logs -a vsvchat -t"
   },
   "author": "darcy",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.0",
-    "@types/express": "^4.17.13",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.18"
   }
 }
