--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node index.ts",
-    "dev": "nodemon",
+    "dev": "nodemon -x ts-node index.ts",
     "logs": "heroku logs -a vsvchat -t"
   },
   "author": "darcy",
